25-gc-framework/01 BarrierSet+Access API 完结(121/152,25 域 1/6,第 6 批 6/8)
正文 195 行+大纲回填 ⚠️ 3 块+21-03 悬念链接文本对齐(半角→全角问号)+README 待更。

深审 2 轮修正(大纲漂移 10+ 处含 3 处机制编造):
- 文件位置错: access* 在 share/oops 非 share/gc/shared
- '编译期静态分派零开销'错(重要): 真实=5 步模板管线(access.hpp:63-92)+RuntimeDispatch 函数指针缓存(accessBackend.hpp:452-459/access.inline.hpp:284-288),运行时分派 switch(bs->kind())——因 GC 是启动时 flag 选的;VM 内部 C++ 走间接调用,解释器/JIT 直插
- 装饰器非 12 种(6 组约 24 个);AS_RAW 旁路(:139-145)
- barrierSet.hpp:72-74 三子组件 ✓;AccessBarrier 嵌套模板 :166-299+特化链 G1→ModRef→BarrierSet→Raw
- 'BarrierSetC2::ideal_node()'编造: 真实=store_at/load_at 虚方法(barrierSetC2.hpp:166-188)+G1BarrierSetC2 pre/post_barrier IdealKit 节点(g1BarrierSetC2.cpp:175/:372)+g1_can_remove_pre/post 优化(:86/:306)+RICM 跳过未发布对象卡标记(:391-398)
- 三视角注入补全: 汇编层(barrierSetAssembler_x86.cpp:34-130+解释器 do_oop_store→store_heap_oop→虚分派)/C1(LIR+Runtime1 blob)/C2(graphKit.cpp:56/:1606)
- CardTable: card_shift=9 在 :231-232(大纲 80-150 漂移);store_check 汇编 shr+movb(:97/:130);G1SATBCardTableLogging/CardTableExtension 是 JDK8 名(JJDK11=G1BarrierSet+DirtyCardQueue g1/dirtyCardQueue.hpp)
- 实证: gc+phases 阶段树 Update RS 消费 dirty card(2 亿次引用写);C1 1248/1344 vs C2 576 nmethod 尺寸;RICM/UseCondCardMark product flag;素材 25-gc-barrier-demo.txt